Commit - 15 : added the checkout page, checkout-item component and updated cart to use selectors from reselect

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -11,6 +11,12 @@
   right: 60px; //Change this if necessary to right: 0;
   z-index: 5;
 
+  .empty-message {
+    font-size: 18px;
+    margin: 50px auto;
+    color: rgb(95, 94, 94);
+  }
+
   .cart-items {
     height: 240px;
     display: flex;
