--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,4 +28,16 @@
     margin-left: auto;
     font-size: 36px;
   }
+
+  .test-warning {
+    margin-top: 40px;
+    text-align: center;
+    font-size: 24px;
+    color: red;
+  }
+
+  button {
+    margin-left: auto;
+    margin-top: 30px;
+  }
 }
